# mise-completions-sync

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  Cargo.toml  README.md  TOOLS.md  mise.toml  registry.toml  release-please-config.json
.github/workflows/: ci.yml  docs.yml  pr-title-check.yml  pr-title.yml  release-please.yml  release.yml
docs/: how-it-works.md  index.md  tools.md
scripts/: generate-tools-status.py
src/: main.rs  sync.rs
