[package]
name = "mise-completions-sync"
version = "0.5.2"
edition = "2021"
description = "Sync shell completions for tools managed by mise"
license = "MIT"
repository = "https://github.com/alltuner/mise-completions-sync"
readme = "README.md"
keywords = ["mise", "completions", "shell", "zsh", "bash"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "1.0"
dirs = "6"
thiserror = "2"
serde_json = "1"

[[bin]]
name = "mise-completions-sync"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
